--- a/app/src/main/res/layout/activity_live_barcode.xml
+++ b/app/src/main/res/layout/activity_live_barcode.xml
@@ -7,12 +7,14 @@
 
   <com.google.mlkit.md.camera.CameraSourcePreview
       android:id="@+id/camera_preview"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
+      android:layout_width="270dp"
+      android:layout_height="270dp"
+      android:layout_gravity="center">
 
     <!-- 非表示 -->
-    <include layout="@layout/camera_preview_overlay"
-        android:visibility="invisible"/>
+    <include
+        layout="@layout/camera_preview_overlay"
+        android:visibility="invisible" />
 
   </com.google.mlkit.md.camera.CameraSourcePreview>
 
