--- a/app/src/main/res/layout/activity_live_barcode.xml
+++ b/app/src/main/res/layout/activity_live_barcode.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:keepScreenOn="true">
+    android:layout_height="match_parent">
 
-  <com.google.mlkit.md.camera.CameraSourcePreview
-      android:id="@+id/camera_preview"
-      android:layout_width="270dp"
-      android:layout_height="270dp"
-      android:layout_gravity="center">
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.google.mlkit.md.LiveBarcodeScanningFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <!-- 非表示 -->
-    <include
-        layout="@layout/camera_preview_overlay"
-        android:visibility="invisible" />
-
-  </com.google.mlkit.md.camera.CameraSourcePreview>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
