--- a/app/src/main/res/layout/activity_live_barcode.xml
+++ b/app/src/main/res/layout/activity_live_barcode.xml
@@ -7,6 +7,6 @@
         android:id="@+id/fragment"
         android:name="com.google.mlkit.md.LiveBarcodeScanningFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
