--- a/app/src/main/res/layout/fragment_live_barcode.xml
+++ b/app/src/main/res/layout/fragment_live_barcode.xml
@@ -16,4 +16,12 @@
 
   </com.google.mlkit.md.camera.CameraSourcePreview>
 
+  <Button
+      android:id="@+id/restart"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center"
+      android:layout_marginBottom="50dp"
+      android:text="QR 再起動" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
